# hil-rig-protocol

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run_checks.sh
.github/workflows/: c-build-options.yml  c-integration-tests.yml  c-unit-tests.yml  clang-format.yml  python-unit-tests.yml
docs/: transport_layer.md
examples/: CMakeLists.txt
include/hil_rig_protocol/: version.h
include/hil_rig_protocol/result_encoding/: .gitkeep
include/hil_rig_protocol/transport/: transport.h  transport_crc.h  transport_frame.h  transport_parser.h  transport_session.h  transport_status.h  transport_types.h
src/: version.c
src/transport/: transport_crc.c  transport_frame.c  transport_parser.c  transport_session.c
tests/c/: CMakeLists.txt
tests/c/integration/: test_placeholder.cpp
tests/c/integration/error_injection/: .gitkeep
tests/c/integration/golden_vectors/: .gitkeep
tests/c/integration/malformed_frames/: .gitkeep
tests/c/integration/pipeline/: .gitkeep
tests/c/support/: .gitkeep
tests/c/unit/: test_placeholder.cpp
tests/c/unit/application/: .gitkeep
tests/c/unit/instruction_encoding/: .gitkeep
tests/c/unit/result_encoding/: .gitkeep
tests/c/unit/transport/: .gitkeep
